# hmir

./: .gitignore  Cargo.toml  Makefile  README.en.md  README.md  hmir.spec  package-lock.json
configs/: log4rs.yaml
constants/src/: lib.rs
data/: service.json
doc/: README.md  SUMMARY.md  Todo.md  arch.md  design.html  net.md  vector.md  virt.md
hmir-ceph/: Cargo.toml
hmir-ceph/src/: arg.rs  auth.rs  base.rs  ceph_client.rs  command.rs  config_key.rs  fs.rs  lib.rs  mds.rs  mgr.rs  mon.rs  osd.rs  pg.rs  pool.rs
hmir-ceph/src/osd/: mod.rs  osd.rs  util.rs
hmir-ceph/tests/: pool_test.rs  test.rs
hmir-errno/: Cargo.toml
hmir-errno/src/: lib.rs
hmir-frontend/: .eslintrc.cjs  README.md  debug  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
hmir-frontend/public/: jquery.waterrippleeffect.min.js  splashscreen.html
hmir-frontend/public/splashscreen/: splashscreen.html
hmir-frontend/src/: App.vue  main.js  main.ts  permission.ts  style.css
hmir-frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
hmir-frontend/src-tauri/icons/: icon.icns
hmir-frontend/src-tauri/src/: clientmgr.rs  main.rs  wsclient.rs
hmir-frontend/src-tauri/src/ceph/: base.rs
hmir-frontend/src-tauri/src/login/: login_cmd.rs  mod.rs
hmir-frontend/src-tauri/src/ovs/: mod.rs  ovs_cmd.rs
hmir-frontend/src-tauri/src/proc/: mod.rs  proc_cmd.rs
hmir-frontend/src-tauri/src/svr/: mod.rs  svr_cmd.rs
hmir-frontend/src-tauri/src/sys/: mod.rs  sys_cmd.rs
hmir-frontend/src-tauri/src/ttyd/: mod.rs  ttyd_cmd.rs
hmir-frontend/src-tauri/src/virt/: mod.rs  virt_cmd.rs
hmir-frontend/src/api/: index.ts
hmir-frontend/src/components/: Greet.vue
hmir-frontend/src/constant/: regex.ts
hmir-frontend/src/directive/: dragDir.ts  index.js  index.ts
hmir-frontend/src/hooks/: index.ts  onMountedOrActivated.ts  useStore.ts
hmir-frontend/src/lang/: en.ts  index.ts  tinymce.js  zh.ts
hmir-frontend/src/layout/: index.vue
hmir-frontend/src/router/: index.js  index.ts
hmir-frontend/src/store/: index.ts
hmir-frontend/src/styles/: index.scss  (+1 more)
hmir-hash/: Cargo.toml
hmir-hash/src/: hmir_result.rs  lib.rs
hmir-ipmitool/: Cargo.toml  build.rs
hmir-ipmitool/ipmitool/: .gitignore  AUTHORS  ChangeLog  Makefile.am  config.h  configure.ac
hmir-ipmitool/src/: bindings.rs  lib.rs
hmir-ovs/: Cargo.toml
hmir-ovs/src/: lib.rs  ovs_bridge.rs  ovs_client.rs  ovs_common.rs  ovs_error.rs  ovs_ofctl.rs  ovs_port.rs  ovs_query.rs  ovs_vsctl.rs
hmir-protocol/: Cargo.toml
hmir-protocol/src/: lib.rs  pkg.rs  proc.rs  sys.rs  systemd.rs
hmir-psutil/: Cargo.toml
hmir-psutil/src/: cpu.rs  main.rs  mem.rs
hmir-psutil/tests/: cpu_test.rs
hmir-stomp/: Cargo.toml
hmir-stomp/parser/: Cargo.toml
hmir-stomp/parser/src/: error.rs  lib.rs
hmir-stomp/parser/src/common/: constants.rs  functions.rs  macros.rs  mod.rs
hmir-stomp/parser/src/model/: mod.rs
hmir-stomp/parser/src/model/frames/: macros.rs  mod.rs  sender.rs  utils.rs
hmir-stomp/parser/src/model/headers/: macros.rs  mod.rs
hmir-stomp/parser/src/parser/: headers.rs  mod.rs
hmir-stomp/src/: error.rs  main.rs  option.rs  server.rs  stomp.rs  tls.rs
hmir-sysctl/: Cargo.toml
hmir-sysctl/src/: lib.rs
hmir-sysinfo/: Cargo.toml
hmir-sysinfo/src/: bios.rs  board.rs  chassis.rs  lib.rs  machine.rs  product.rs  release.rs
hmir-systemd/: Cargo.toml
hmir-systemd/src/: errors.rs  models.rs
hmir-tauri/: Cargo.toml  tauri.conf.json
hmir-tauri/src/: clientmgr.rs  main.rs  wsclient.rs
hmir-token/: Cargo.toml
hmir-token/src/: lib.rs
hmir-virt/: Cargo.toml
hmir-virt/src/: lib.rs  virt_query.rs  virt_type.rs
hmir-webserver/: Cargo.toml
hmir-webserver/src/: main.rs
hmir-websocket/: Cargo.toml
hmir-websocket/examples/: echo.rs  echo_html.html  echo_html.rs
hmir-websocket/src/: error.rs  lib.rs  request.rs  response.rs  websocket.rs
hmir-webterm/: Cargo.toml
hmir-webterm/src/: index.html  main.rs  pty.rs  terminal.rs
hmir-ws-client/: Cargo.toml
hmir-ws-client-mgr/: Cargo.toml
hmir-ws-client-mgr/src/: lib.rs  ws_client_mgr.rs
hmir-ws-client-mgr/src/ceph/: base.rs
hmir-ws-client-mgr/src/login/: login_mgr.rs  mod.rs
hmir-ws-client-mgr/src/net/: mod.rs  net_mgr.rs
hmir-ws-client-mgr/src/proc/: mod.rs  proc_mgr.rs
hmir-ws-client-mgr/src/svr/: svr_mgr.rs
hmir-ws-client-mgr/src/sys/: mod.rs  sys_mgr.rs
hmir-ws-client-mgr/src/tests/: mod.rs  test_default_args.rs
hmir-ws-client-mgr/src/tests/ceph_test/: base.rs
hmir-ws-client-mgr/src/tests/client_mgr_test/: client_mgr_test.rs  mod.rs
hmir-ws-client-mgr/src/tests/login_test/: login_test.rs  mod.rs
hmir-ws-client-mgr/src/tests/net_test/: mod.rs  net_test.rs
hmir-ws-client-mgr/src/tests/virt_test/: mod.rs  virt_test.rs
hmir-ws-client-mgr/src/ttyd/: mod.rs  ttyd_mgr.rs
hmir-ws-client-mgr/src/virt/: mod.rs  virt_mgr.rs
hmir-ws-client/src/: lib.rs  ws_client.rs
hmir-ws-client/src/ceph/: ceph_base.rs  mod.rs
hmir-ws-client/src/login/: login.rs
hmir-ws-client/src/net/: net.rs
hmir-ws-client/src/pkg/: pkg.rs
hmir-ws-client/src/proc/: mod.rs  proc.rs
hmir-ws-client/src/svr/: mod.rs  svr.rs
hmir-ws-client/src/sys/: sys.rs
hmir-ws-client/src/tests/: mod.rs  test_default_args.rs
hmir-ws-client/src/tests/ceph_test/: ceph_base_test.rs  mod.rs
hmir-ws-client/src/tests/login_test/: login_test.rs
hmir-ws-client/src/tests/net_test/: net_test.rs
hmir-ws-client/src/tests/virt_test/: virt_test.rs
hmir-ws-client/src/ttyd/: mod.rs  ttyd.rs
hmir-ws-client/src/virt/: mod.rs  virt.rs
ipmitool/: Cargo.toml
libipmitool-sys/: Cargo.toml  build.rs
libipmitool-sys/src/: bindings.rs  lib.rs
script/: gen-key.sh  hmir-private-key.pem  hmir-public-key.pem
src/: ceph.rs  clickhouse.rs  clientmgr.rs  ipmi.rs  iptables.rs  kernel.rs  main.rs  net.rs  nginx.rs  observer.rs  pam.rs  pkg.rs  proc.rs  ssh.rs  svr.rs  sys.rs  tensorflow.rs  tokenmgr.rs  ttyd.rs  virt.rs  wsclient.rs
src/ceph/: ceph.rs  cluster.rs  mod.rs  osd.rs
src/net/: linux_br.rs  linuxbr.rs  ovs.rs
src/psutil/: psutil.rs
(+195 files in other folders)
