[package]
name = "hmir"
version = "0.1.0"
edition = "2021"
authors = ["Wujie Duan <dev17001@linx-info.com>"]
license = "Apache-2.0"
repository = "https://gitee.com/openeuler/hmir"
homepage = "https://gitee.com/openeuler/hmir"
description = "Host management in rust "


[dependencies]
anyhow = "1.0.66"
single-instance = "0.3.3"
constants = {path = "constants"}
log4rs = "1.2.0"
log = "0.4.17"
clap = "3.2.23"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
jsonrpsee = { version = "0.15.1", features = ["full"] }
jsonrpsee-core = "0.15.1"
jsonrpsee-types = "0.15.1"
futures = "0.3"
lazy_static = "1.4.0"
serde_json = "1.0.87"

hmir-hash = {path = "hmir-hash" }
hmir-systemd = {path = "hmir-systemd" }


[[test]]
name = "integration"
path = "tests/tests.rs"