


[package]
name = "hmir"
version = "0.1.0"
edition = "2021"
authors = ["Wujie Duan <dev17001@linx-info.com>"]
license = "Apache-2.0"
repository = "https://gitee.com/openeuler/hmir"
homepage = "https://gitee.com/openeuler/hmir"
description = "Host management in rust "
readme = "README.md"


[dependencies]
anyhow = "1.0.66"
single-instance = "0.3.3"
constants = {path = "constants"}
log4rs = "1.2.0"
log = "0.4.17"
clap = "3.2.23"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
jsonrpsee = { version = "0.15.1", features = ["full"] }
jsonrpsee-core = "0.15.1"
jsonrpsee-types = "0.15.1"
futures = "0.3"
lazy_static = "1.4.0"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
nix = "0.25.0"
core_affinity = "0.7.6"
ssh2 = "0.9.3"
pam = "0.7.0"
cfg = "0.5.0"
#tensorflow-sys = {path = "tensorflow-sys",version ="0."}
tensorflow = {path = "tensorflow-rust", version="0.19.1"}

hmir-hash = {path = "hmir-hash" }
hmir-ovs = {path = "hmir-ovs" }
hmir-ceph = {path = "hmir-ceph" }
hmir-token = {path = "hmir-token"}
hmir-errno = {path = "hmir-errno"}
hmir-protocol = { path = "hmir-protocol"}

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.14.1"
hmir-systemd = {path = "hmir-systemd" }
iptables = "0.5.0"
hmir-ipmitool = { path = "hmir-ipmitool"}
hmir-virt = {path = "hmir-virt"}
#hmir-dpkg = {path = "hmir-dpkg"}

[[test]]
name = "integration"
path = "tests/tests.rs"
