[package]
name = "hmir-ceph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ceph-rust = "0.1.17"
libc = "0.2.138"
ceph = "3.2.5"
log4rs = "1.2.0"
log = "0.4.17"
tokio = "1.22.0"
actix-rt = "2.7.0"
serde_json = "1.0.89"
serde = { version = "1.0.149", features = ["derive"] }
jsonrpsee = { version = "0.15.1", features = ["full"] }
jsonrpsee-core = "0.15.1"
jsonrpsee-types = "0.15.1"
regex = "1.7.0"
lazy_static = "1.4.0"

hmir-hash = {path = "../hmir-hash"}
