[package]
name = "hmir-stomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0" , features =["full"]}
tokio-rustls = "0.24.1"
rustls = "0.21.1"
rustls-pemfile = "1.0.2"

anyhow = "1.0.66"
log4rs = "1.2.0"
log = "0.4.17"
clap = "3"
thiserror = "1"

parser = { path = "./parser"}