[package]
name = "hmir-virt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virt = "=0.2.11"
anyhow = "1.0.66"
jsonrpsee = { version = "0.15.1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"

hmir-token = {path = "../hmir-token"}
hmir-hash = {path = "../hmir-hash" }
hmir-errno = {path = "../hmir-errno" }
