[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["io-util", "time", "macros"] }
httpdate = "1"
base64 = "0"
sha-1 = "0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
log = "0"
env_logger = "0"