[package]
name = "hmir-ws-client-mgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = "1.4.0"
log4rs = "1.2.0"
log = "0.4.17"

hmir-hash = { path = "../hmir-hash" }
hmir-errno = { path ="../hmir-errno" }
hmir-ws-client = { path ="../hmir-ws-client"}