[package]
name = "hmir-ws-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.1.2", features = [] }
jsonrpsee = { version = "0.15.1", features = ["full"] }
jsonrpsee-core = "0.15.1"
jsonrpsee-ws-client = "0.15.1"
jsonrpsee-types = "0.15.1"
anyhow = "1.0.66"
futures = "0.3.25"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
lazy_static = "1.4.0"
log4rs = "1.2.0"
log = "0.4.17"

hmir-hash = { path = "../hmir-hash" }
hmir-errno = { path ="../hmir-errno" }
hmir-protocol = {path = "../hmir-protocol" }
#hmir-systemd = { path ="../hmir-systemd"}
#hmir-ceph = { path ="../hmir-ceph"}