[package]
name = "hmir-frontend"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = [] }
jsonrpsee = { version = "0.15.1", features = ["full"] }
jsonrpsee-core = "0.15.1"
jsonrpsee-ws-client = "0.15.1"
jsonrpsee-types = "0.15.1"
anyhow = "1.0.66"
futures = "0.3.25"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
lazy_static = "1.4.0"
log4rs = "1.2.0"
log = "0.4.17"

hmir-hash = { path = "../../hmir-hash" }
hmir-errno = { path ="../../hmir-errno" }
hmir-ws-client = { path ="../../hmir-ws-client"}
hmir-ws-client-mgr = { path ="../../hmir-ws-client-mgr"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
